# alert-hub

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alert_hub/: __init__.py  api.py  auth.py  config.py  db.py  main.py  models.py  routing.py  service.py  time_utils.py  worker.py
alert_hub/notifiers/: base.py  ntfy.py
config/: config.example.yaml
scripts/: codex_alert_common.py  codex_alert_mcp.py  codex_attention_watcher.py  codex_attention_watcher.sh  codex_notify.py  codex_notify.sh  send_event.py  send_event.sh
tests/: conftest.py  test_api.py  test_codex_scripts.py  test_sender_script.py  test_worker.py
